# pydata-london-2025-hands-on-apache-iceberg

./: .gitignore  README.md  compose.kafka.yaml  compose.yaml  main.py  pyproject.toml
data/fx/: USD_GBP.csv  USD_GBP_clean.csv
data/stocks/: AAPL.csv  GRG.csv  JWD.csv  NDA.csv  NOVO.csv  NVO.csv  SPY.csv
images/jupyter/: Dockerfile  requirements.in  requirements.txt
images/kafka_connect/: Dockerfile
images/marimo/: Dockerfile  marimo.toml  requirements.in  requirements.txt
images/trino/: hive.properties  lakekeeper.properties
notebooks/: 01 Exploring.ipynb  01-Exploring-Iceberg.ipynb  02-Querying-Data.ipynb  03-Updating-Metadata.ipynb  04-Time Travel.ipynb  05-Partitioning.ipynb  06-Data-Engineering.ipynb  07-Answering-the-question.ipynb  07-Exercise.ipynb  08-Exercise.ipynb  08-Solution.ipynb  BONUS-streaming-iceberg.ipynb  exploring_iceberg.py  querying_data.py  schema.py  updating_metadata.py  utils.py
notebooks/.Trash-1000/info/: iceberg_query_engines.svg.trashinfo
notebooks/01-Exploring-Iceberg/: exploring_iceberg.py
notebooks/02-querying-data/: querying_data.py
notebooks/03-updating-metadata/: import_demo.py  updating_metadata.py
src/hands_on_with_apache_iceberg/: bootstrap.py  cli.py  download.py
