[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hands-on-with-apache-iceberg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "rich>=14.0.0",
    "s3fs>=2025.3.2",
    "typer>=0.15.2",
]

[project.scripts]
iceberg = "hands_on_with_apache_iceberg.cli:app"
