[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hands-on-with-apache-iceberg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx",
    "rich",
    "s3fs",
    "typer",
    "pyiceberg"
]

[project.scripts]
iceberg = "hands_on_with_apache_iceberg.cli:app"
