[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hands-on-with-apache-iceberg"
version = "0.1.0"
description = "A CLI for bootstrapping the demo"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx",
    "rich",
    "s3fs",
    "typer",
    "pyiceberg",
    "yfinance>=0.2.61",
]

[project.scripts]
iceberg = "hands_on_with_apache_iceberg.cli:app"
